--- a/catalog.html
+++ b/catalog.html
@@ -190,7 +190,7 @@
                 </div>
               </fieldset>
               <fieldset class="price">
-                <legend class="price-value">Цена: 100 – 500 руб.</legend>
+                <legend class="price-value">Цена: 100 руб – 500 руб.</legend>
                 <div class="price-controls">
                   <label class="min-price">
                     <input class="visually-hidden" type="text" name="min-price" value="100">
@@ -247,7 +247,7 @@
               <div class="price-wrapper">
                 <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">310₽
+                  <p class="item-price">310
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -263,7 +263,7 @@
               <div class="price-wrapper">
                 <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">380₽
+                  <p class="item-price">380
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -279,7 +279,7 @@
               <div class="price-wrapper">
                 <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">355₽
+                  <p class="item-price">355
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -295,7 +295,7 @@
               <div class="price-wrapper">
                 <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">415₽
+                  <p class="item-price">415
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -311,7 +311,7 @@
               <div class="price-wrapper">
                 <img src="img/item-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">325₽
+                  <p class="item-price">325
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -327,7 +327,7 @@
               <div class="price-wrapper">
                 <img src="img/item-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">410₽
+                  <p class="item-price">410
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -343,7 +343,7 @@
               <div class="price-wrapper">
                 <img src="img/item-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">375₽
+                  <p class="item-price">375
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -359,7 +359,7 @@
               <div class="price-wrapper">
                 <img src="img/item-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">320₽
+                  <p class="item-price">320
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -375,7 +375,7 @@
               <div class="price-wrapper">
                 <img src="img/item-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">440₽
+                  <p class="item-price">440
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -391,7 +391,7 @@
               <div class="price-wrapper">
                 <img src="img/item-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">435₽
+                  <p class="item-price">435
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -407,7 +407,7 @@
               <div class="price-wrapper">
                 <img src="img/item-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">355₽
+                  <p class="item-price">355
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -423,7 +423,7 @@
               <div class="price-wrapper">
                 <img src="img/item-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">420₽
+                  <p class="item-price">420
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -436,9 +436,10 @@
               </div>
             </li>
           </ul>
+          <div class="pagination-wrapper">
           <ul class="pagination">
             <li class="pagination-item pagination-item-disabled">
-              <a href="#">&lt;</a>
+              <a href="#">❮</a>
             </li>
             <li class="pagination-item pagination-item-current">
               <a>1</a>
@@ -456,10 +457,10 @@
               <a href="#">5</a>
             </li>
             <li class="pagination-item">
-              <a href="#">&gt;</a>
+              <a href="#">❯</a>
             </li>
           </ul>
-
+        </div>
         </section>
       </main>
       <footer class="main-footer">
