--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Глэйси</title>
+  <title>Глейси</title>
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -160,7 +160,7 @@
               <div class="price-wrapper-hit">
                 <img class="icecream" src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">310₽
+                  <p class="item-price">310
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -176,7 +176,7 @@
               <div class="price-wrapper-hit">
                 <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">380₽
+                  <p class="item-price">380
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -193,7 +193,7 @@
                 <div class="price-wrapper">
                   <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                   <div class="catalog-list-item-price">
-                    <p class="item-price">355₽
+                    <p class="item-price">355
                       <span class="item-weight">/кг</span>
                     </p>
                   </div>
@@ -210,7 +210,7 @@
               <div class="price-wrapper-hit">
                 <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                 <div class="catalog-list-item-price">
-                  <p class="item-price">415₽
+                  <p class="item-price">415
                     <span class="item-weight">/кг</span>
                   </p>
                 </div>
@@ -349,24 +349,24 @@
         </ul>
       </div>
       <div class="useful-documents">
-          <div class="footer-information-list">
-              <div class="left-column">
-                <div class="doc-item">
-                  <a class="footer-link-information for-suppliers" href="#">Для поставщиков</a>
-                </div>
-                <div class="doc-item">
-                  <a class="footer-link-information" href="#">О производстве</a>
-                </div>
-              </div>
-              <div class="right-column">
-                <div class="doc-item">
-                  <a class="footer-link-information" href="#">Наши документы</a>
-                </div>
-                <div class="doc-item">
-                  <a class="footer-link-information" href="#">Экологические стандарты</a>
-                </div>
-              </div>
+        <div class="footer-information-list">
+          <div class="left-column">
+            <div class="doc-item">
+              <a class="footer-link-information for-suppliers" href="#">Для поставщиков</a>
             </div>
+            <div class="doc-item">
+              <a class="footer-link-information" href="#">О производстве</a>
+            </div>
+          </div>
+          <div class="right-column">
+            <div class="doc-item">
+              <a class="footer-link-information" href="#">Наши документы</a>
+            </div>
+            <div class="doc-item">
+              <a class="footer-link-information" href="#">Экологические стандарты</a>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="footer-copyright">
         <a href="https://htmlacademy.ru/intensive/htmlcss">
@@ -377,21 +377,23 @@
       </div>
     </footer>
     <div class="feedback-overlay">
-    <section class="modal-feedback-container">
-      <form class="modal-feedback" action="https://echo.htmlacademy.ru" method="post">
-        <h2 class="form-title">Мы обязательно вам ответим!</h2>
-        <button class="modal-feedback-close" type="button">Закрыть</button><br>
-        <label class="visually-hidden" for="feedback-name">Имя</label>
-        <input class="feedback-input" type="text" id="feedback-name" name="feedback-name" placeholder="Как вас зовут?" tabindex="0" required>
-        <label class="visually-hidden" for="feedback-email">Электронная почта</label>
-        <input class="feedback-input" type="email" id="feedback-email" name="feedback-email" placeholder="Ваша почта для ответа?" tabindex="0" required>
-        <label class="visually-hidden" for="feedback-text">Напишите что-нибудь</label>
-        <textarea class="feedback-input-textarea" id="feedback-text" rows="6" placeholder="Напишите что-нибудь..."
-          tabindex="0" required></textarea>
-        <button class="button-submit">Отправить</button>
-      </form>
-    </section>
-  </div>
+      <section class="modal-feedback-container">
+        <form class="modal-feedback" action="https://echo.htmlacademy.ru" method="post">
+          <h2 class="form-title">Мы обязательно вам ответим!</h2>
+          <button class="modal-feedback-close" type="button">Закрыть</button><br>
+          <label class="visually-hidden" for="feedback-name">Имя</label>
+          <input class="feedback-input" type="text" id="feedback-name" name="feedback-name" placeholder="Как вас зовут?"
+            tabindex="0" required>
+          <label class="visually-hidden" for="feedback-email">Электронная почта</label>
+          <input class="feedback-input" type="email" id="feedback-email" name="feedback-email" placeholder="Ваша почта для ответа?"
+            tabindex="0" required>
+          <label class="visually-hidden" for="feedback-text">Напишите что-нибудь</label>
+          <textarea class="feedback-input-textarea" id="feedback-text" rows="6" placeholder="Напишите что-нибудь..."
+            tabindex="0" required></textarea>
+          <button class="button-submit">Отправить</button>
+        </form>
+      </section>
+    </div>
   </div>
   <script src="js/scripts.js"></script>
 </body>
