--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <ul class="hits-list">
             <li class="offers-item">
               <div class="price-wrapper-hit">
-                <img class="icecream" src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <img class="icecream" src="img/item-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">310
                     <span class="item-weight">/кг</span>
@@ -174,7 +174,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper-hit">
-                <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                <img src="img/item-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                 <div class="catalog-list-item-price">
                   <p class="item-price">380
                     <span class="item-weight">/кг</span>
@@ -191,7 +191,7 @@
             <li class="offers-item">
               <div class="price-wrapper-hit">
                 <div class="price-wrapper">
-                  <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                  <img src="img/item-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                   <div class="catalog-list-item-price">
                     <p class="item-price">355
                       <span class="item-weight">/кг</span>
@@ -208,7 +208,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper-hit">
-                <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                <img src="img/item-4png.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">415
                     <span class="item-weight">/кг</span>
@@ -289,7 +289,7 @@
             <p class="tel-map">
               Для заказов по телефону:
               <br>
-              <b class="address-details">8 812 450-24-25</b>
+              <b class="address-details">8 812 450-25-25</b>
               <br> (с 10 до 20 ежедневно)
             </p>
             <a class="button-feedback" href="login.html">Форма обратной связи</a>
