--- a/catalog.html
+++ b/catalog.html
@@ -245,7 +245,7 @@
           <ul class="offers-list">
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <img src="img/item-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">310
                     <span class="item-weight">/кг</span>
@@ -261,7 +261,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                <img src="img/item-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                 <div class="catalog-list-item-price">
                   <p class="item-price">380
                     <span class="item-weight">/кг</span>
@@ -277,7 +277,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <img src="img/item-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                 <div class="catalog-list-item-price">
                   <p class="item-price">355
                     <span class="item-weight">/кг</span>
@@ -293,7 +293,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                <img src="img/item-4png.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">415
                     <span class="item-weight">/кг</span>
@@ -309,7 +309,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
+                <img src="img/item-5.png" width="267" height="267" alt="Сливочное с брусничным джемом">
                 <div class="catalog-list-item-price">
                   <p class="item-price">325
                     <span class="item-weight">/кг</span>
@@ -325,7 +325,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+                <img src="img/item-6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
                 <div class="catalog-list-item-price">
                   <p class="item-price">410
                     <span class="item-weight">/кг</span>
@@ -341,7 +341,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+                <img src="img/item-7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">375
                     <span class="item-weight">/кг</span>
@@ -357,7 +357,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+                <img src="img/item-8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">320
                     <span class="item-weight">/кг</span>
@@ -373,7 +373,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+                <img src="img/item-9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
                 <div class="catalog-list-item-price">
                   <p class="item-price">440
                     <span class="item-weight">/кг</span>
@@ -389,7 +389,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
+                <img src="img/item-10.png" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
                 <div class="catalog-list-item-price">
                   <p class="item-price">435
                     <span class="item-weight">/кг</span>
@@ -405,7 +405,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+                <img src="img/item-11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
                 <div class="catalog-list-item-price">
                   <p class="item-price">355
                     <span class="item-weight">/кг</span>
@@ -421,7 +421,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
+                <img src="img/item-12.png" width="267" height="267" alt="Сливочное с мятным сиропом">
                 <div class="catalog-list-item-price">
                   <p class="item-price">420
                     <span class="item-weight">/кг</span>
