shake option add

--- a/index.html
+++ b/index.html
@@ -383,13 +383,13 @@
           <button class="modal-feedback-close" type="button">Закрыть</button><br>
           <label class="visually-hidden" for="feedback-name">Имя</label>
           <input class="feedback-input" type="text" id="feedback-name" name="feedback-name" placeholder="Как вас зовут?"
-            tabindex="0" required>
+            tabindex="0">
           <label class="visually-hidden" for="feedback-email">Электронная почта</label>
           <input class="feedback-input" type="email" id="feedback-email" name="feedback-email" placeholder="Ваша почта для ответа?"
-            tabindex="0" required>
+            tabindex="0">
           <label class="visually-hidden" for="feedback-text">Напишите что-нибудь</label>
           <textarea class="feedback-input-textarea" id="feedback-text" rows="6" placeholder="Напишите что-нибудь..."
-            tabindex="0" required></textarea>
+            tabindex="0"></textarea>
           <button class="button-submit">Отправить</button>
         </form>
       </section>
