--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
       </header>
       <section class="slider">
-        <h2 class="visually-hidden">Витрина мороженного</h2>
+        <h2 class="visually-hidden">Витрина мороженого</h2>
         <div class="slider-controls">
           <label for="product-1">Первый</label>
           <label for="product-2">Второй</label>
@@ -226,7 +226,7 @@
         </section>
         <section class="features">
           <h2 class="visually-hidden">Преимущества</h2>
-          <h3 class="features-title">Магазин Глэйси- это онлайн- и офлайн-магазин по продаже мороженного собственного
+          <h3 class="features-title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного
             производства на развес</h3>
           <div class="features-container">
             <div class="features-wrapper-left">
