--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Глейси</title>
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/normalize.min.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="body-index">
@@ -254,7 +254,7 @@
         <div class="blog-news-wrapper">
           <article class="news">
             <h2 class="news-title">Новое в нашем блоге</h2>
-            <a href="index.html">10 способов сервировки фруковых щербетов к столу</a>
+            <a href="index.html">10 способов сервировки фруктовых щербетов к столу</a>
           </article>
           <section class="subscription-form">
             <h2 class="visually-hidden">Подписка</h2>
@@ -273,26 +273,21 @@
         <section class="map">
           <h2 class="visually-hidden">Как нас найти</h2>
           <div class="map-wrapper">
-            <img src="img/map-pin.png" width="1200" height="430" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d594.1925012499412!2d30.32288633585598!3d59.938490994603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fc9b0c6fd%3A0x5305c517be3d8ef2!2z0JLQvtC70YvQvdGB0LrQuNC5INC_0LXRgC4sIDgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1536621404423"
+              width="1200" height="430" style="border:0" allowfullscreen></iframe>
           </div>
           <section class="address">
             <h3 class="visually-hidden">Адрес офиса</h3>
-            <p class="adress-map">
-              Адрес главного офиса
-              <br> и офлайн магазина:
-              <br>
-              <b class="address-details">ул.Большая Конюшенная</b>
-              <br>
-              <b class="address-details">19/8, Санкт-Петербург</b>
-              <br>
-            </p>
-            <p class="tel-map">
-              Для заказов по телефону:
-              <br>
-              <b class="address-details">8 812 450-25-25</b>
-              <br> (с 10 до 20 ежедневно)
-            </p>
-            <a class="button-feedback" href="login.html">Форма обратной связи</a>
+            <div class="contacts-info">
+              <p class="adress-map">Адрес главного офиса и офлайн магазина:</p>
+              <b class="address-details">ул.Большая Конюшенная 19/8, Санкт-Петербург</b>
+              <p class="tel-details">
+                Для заказов по телефону:
+                <a class="tel" href="tel:+78124502525">8 812 450-25-25</a>
+                (с 10 до 20 ежедневно)
+              </p>
+              <a class="button-feedback" href="login.html">Форма обратной связи</a>
+            </div>
           </section>
         </section>
       </main>
@@ -301,49 +296,23 @@
       <div class="footer-social">
         <ul class="social-list">
           <li class="social-item">
-            <a class="social-button tweet" href="#">
+            <a class="social-button tweet" href="https://twitter.com/htmlacademy_ru" target="_blank">
               <span class="visually-hidden">Твиттер</span>
-              <!-- <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 32 32">
-                <path fill="#FFF" d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.944
-              12.809c-.251 6.516-3.463 10.832-10.992 10.702h-.486c-.447 0-4.543-.443-5.344-1.823 2.479.19 4.247-.406
-              5.12-1.136-1.048-.289-2.923-.461-3.251-2.848.384.104.618.221 1.299.113-1.307-.824-2.758-1.519-2.679-3.643.311.317
-              1.164.518 1.46.457-.768-.233-2.149-3.244-.974-4.781 1.984 1.79 4.075 3.482 7.804 3.643.227-2.214 1.24-3.699 3.168-4.325 1.84-.479
-              3.255.26 3.901 1.138.737-.224 1.453-.466 2.193-.685-.004.833-.569 1.463-.935 1.709.747.165 1.423-.475 1.423-.475-.184.963-1.094
-              1.725-1.707 1.954z" />
-              </svg> -->
             </a>
           </li>
           <li class="social-item">
-            <a class="social-button insta" href="#">
+            <a class="social-button insta" href="https://www.instagram.com/htmlacademy/" target="_blank">
               <span class="visually-hidden">Инстаграм</span>
-              <!-- <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 32 32">
-                <g fill="#FFF">
-                  <path d="M20.916 16a4.938 4.938 0 1 1-9.877 0c0-.394.051-.773.138-1.14h-.897v6.838h11.396V14.86h-.897c.086.367.137.746.137 1.14z" />
-                  <path d="M15.978 18.659c1.466 0 2.659-1.193 2.659-2.659s-1.193-2.659-2.659-2.659c-1.466 0-2.659 1.193-2.659 2.659s1.192 2.659 2.659 2.659zM18.637 10.302h3.039v3.039h-3.039z" />
-                  <path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.955
-              21.698a2.285 2.285 0 0 1-2.279 2.279H10.279A2.285 2.285 0 0 1 8 21.698V10.302a2.286 2.286 0 0 1
-              2.279-2.279h11.396a2.286 2.286 0 0 1 2.279 2.279v11.396z" />
-                </g>
-              </svg> -->
             </a>
           </li>
           <li class="social-item">
-            <a class="social-button fb" href="#">
+            <a class="social-button fb" href="https://www.facebook.com/htmlacademy/" target="_blank">
               <span class="visually-hidden">Фейсбук</span>
-              <!-- <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 32 32">
-                <path fill="#FFF" d="M16 0C7.164 0 0 7.163 0 16s7.164 16 16 16c8.837 0 16-7.164 16-16S24.837 0 16 0zm4.062 9.455h-3.021v3.444h3.021v3.445h-3.021v8.61H14.02v-8.61H11v-3.445h3.021V9.455c0-1.902 1.353-3.445 3.021-3.445h3.021v3.445z" />
-              </svg> -->
             </a>
           </li>
           <li class="social-item">
-            <a class="social-button vk" href="#">
+            <a class="social-button vk" href="https://vk.com/htmlacademy" target="_blank">
               <span class="visually-hidden">Вконтакте</span>
-              <!-- <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 32 32">
-                <g fill="#FFF">
-                  <path d="M16.637 14.495c.402-.019.719-.082.951-.188.326-.145.54-.33.641-.559.101-.229.15-.496.15-.797 0-.232-.058-.465-.174-.697-.116-.232-.322-.405-.617-.517-.264-.1-.592-.155-.984-.165a76.242 76.242 0 0 0-1.652-.014h-.339v2.965h.565c.571 0 1.057-.009 1.459-.028zM18.118 17.084c-.282-.081-.672-.125-1.166-.132a127.97 127.97 0 0 0-1.55-.009h-.79v3.493h.264c1.014 0 1.74-.003 2.18-.009a3.2 3.2 0 0 0 1.212-.245c.377-.157.633-.364.774-.625s.214-.562.214-.9c0-.446-.088-.788-.261-1.03-.17-.241-.464-.423-.877-.543z" />
-                  <path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm6.602 20.531a3.73 3.73 0 0 1-1.124 1.327c-.552.415-1.161.71-1.823.886s-1.501.264-2.519.264h-6.121V8.987h5.443c1.13 0 1.957.038 2.48.113a5.126 5.126 0 0 1 1.561.5c.533.27.929.632 1.189 1.087.26.455.392.975.392 1.558 0 .678-.179 1.278-.536 1.795-.358.518-.863.92-1.517 1.208v.075c.917.182 1.642.559 2.179 1.13.537.571.807 1.325.807 2.261 0 .678-.138 1.283-.411 1.817z" />
-                </g>
-              </svg> -->
             </a>
           </li>
         </ul>
@@ -369,11 +338,11 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
           <img class="img-logo" src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
         </a>
         <p class="copyright">Сделано в
-          <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
+          <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">HTML Academy</a> ©2017</p>
       </div>
     </footer>
     <div class="feedback-overlay">
@@ -395,7 +364,7 @@
       </section>
     </div>
   </div>
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
