--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог Глейси</title>
-  <link href="css/normalize.min.css" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <!-- <link href="css/normalize.min.css" rel="stylesheet"> -->
+  <link href="css/style.css" rel="stylesheet">
+  <!-- <link href="css/style.min.css" rel="stylesheet"> -->
 </head>
 
 <body class="body-catalog">
@@ -190,7 +192,7 @@
                 </div>
               </fieldset>
               <fieldset class="price">
-                <legend class="price-value">Цена: 100 руб – 500 руб.</legend>
+                <legend class="price-value">Цена: 100 руб. – 500 руб.</legend>
                 <div class="price-controls">
                   <label class="min-price">
                     <input class="visually-hidden" type="text" name="min-price" value="100">
@@ -246,7 +248,7 @@
           <ul class="offers-list">
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <img class="img-cat" src="img/item-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">310
                     <span class="item-weight">/кг</span>
@@ -262,7 +264,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                <img class="img-cat" src="img/item-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                 <div class="catalog-list-item-price">
                   <p class="item-price">380
                     <span class="item-weight">/кг</span>
@@ -278,7 +280,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <img class="img-cat" src="img/item-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                 <div class="catalog-list-item-price">
                   <p class="item-price">355
                     <span class="item-weight">/кг</span>
@@ -294,7 +296,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-4png.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                <img class="img-cat" src="img/item-4png.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">415
                     <span class="item-weight">/кг</span>
@@ -310,7 +312,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-5.png" width="267" height="267" alt="Сливочное с брусничным джемом">
+                <img class="img-cat" src="img/item-5.png" width="267" height="267" alt="Сливочное с брусничным джемом">
                 <div class="catalog-list-item-price">
                   <p class="item-price">325
                     <span class="item-weight">/кг</span>
@@ -326,7 +328,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+                <img class="img-cat" src="img/item-6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
                 <div class="catalog-list-item-price">
                   <p class="item-price">410
                     <span class="item-weight">/кг</span>
@@ -342,7 +344,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+                <img class="img-cat" src="img/item-7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">375
                     <span class="item-weight">/кг</span>
@@ -358,7 +360,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+                <img class="img-cat" src="img/item-8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">320
                     <span class="item-weight">/кг</span>
@@ -374,7 +376,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+                <img class="img-cat" src="img/item-9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
                 <div class="catalog-list-item-price">
                   <p class="item-price">440
                     <span class="item-weight">/кг</span>
@@ -390,7 +392,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-10.png" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
+                <img class="img-cat" src="img/item-10.png" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
                 <div class="catalog-list-item-price">
                   <p class="item-price">435
                     <span class="item-weight">/кг</span>
@@ -406,7 +408,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+                <img class="img-cat" src="img/item-11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
                 <div class="catalog-list-item-price">
                   <p class="item-price">355
                     <span class="item-weight">/кг</span>
@@ -422,7 +424,7 @@
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
-                <img src="img/item-12.png" width="267" height="267" alt="Сливочноe с мятным сиропом">
+                <img class="img-cat" src="img/item-12.png" width="267" height="267" alt="Сливочноe с мятным сиропом">
                 <div class="catalog-list-item-price">
                   <p class="item-price">420
                     <span class="item-weight">/кг</span>
