--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Глейси</title>
-  <link href="css/normalize.min.css" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <!-- <link href="css/style.min.css" rel="stylesheet"> -->
 </head>
 
 <body class="body-index">
@@ -142,14 +143,14 @@
           <div class="deals-item-raspberry">
             <h3>Малинка даром!</h3>
             <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a class="deals-button" href="catalog.html">Хочу варенье!</a>
+            <a class="deals-button-rsb" href="catalog.html">Хочу варенье!</a>
           </div>
           <div class="deals-item-chocolate">
             <h3>Шоколадки даром!</h3>
             <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно
               бесплатно.
             </p>
-            <a class="deals-button" href="catalog.html">Хочу шоколадки!</a>
+            <a class="deals-button-choco" href="catalog.html">Хочу шоколадки!</a>
           </div>
         </section>
         <section class="popular-offers">
@@ -280,7 +281,7 @@
             <h3 class="visually-hidden">Адрес офиса</h3>
             <div class="contacts-info">
               <p class="adress-map">Адрес главного офиса и офлайн магазина:</p>
-              <b class="address-details">ул.Большая Конюшенная 19/8, Санкт-Петербург</b>
+              <b class="address-details">ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
               <p class="tel-details">
                 Для заказов по телефону:
                 <a class="tel" href="tel:+78124502525">8 812 450-25-25</a>
