basket-table fixed

--- a/catalog.html
+++ b/catalog.html
@@ -24,10 +24,8 @@
             <li class="site-navigation-current">
               <a class="current" href="catalog.html">Каталог</a>
               <ul class="site-navigation-submenu">
-                <li class="site-navigation-submenu-item">
-                  <a href="#">
-                    <b>Новинки</b>
-                  </a>
+                <li class="site-navigation-list-item-first">
+                  <a href="#"><b>Новинки</b></a>
                 </li>
                 <li class="site-navigation-submenu-item-current">
                   <a href="catalog.html">Сливочное</a>
