--- a/catalog.html
+++ b/catalog.html
@@ -116,7 +116,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
+                    <tr class="basket-product">
                       <td class="basket-delete">
                         <button>
                           <span class="visually-hidden">Удалить</span>
@@ -131,7 +131,7 @@
                       </td>
                       <td class="basket-value">300 руб.</td>
                     </tr>
-                    <tr>
+                    <tr class="basket-product">
                       <td class="basket-delete">
                         <button>
                           <span class="visually-hidden">Удалить</span>
