--- a/catalog.html
+++ b/catalog.html
@@ -212,13 +212,13 @@
                 <legend class="fat">Жирность</legend>
                 <div class="fat-filter-wrapper">
                   <input class="fat-select visually-hidden" type="radio" name="fat-value" value="0" id="zero">
-                  <label class="filter-fat" for="zero">"0%"</label>
+                  <label class="filter-fat first-lable" for="zero">"0%"</label>
                   <input class="fat-select visually-hidden" type="radio" name="fat-value" value="10" id="ten" checked>
                   <label class="filter-fat" for="ten">до 10%</label>
                   <input class="fat-select visually-hidden" type="radio" name="fat-value" value="30" id="thirty">
                   <label class="filter-fat" for="thirty">до 30%</label>
                   <input class="fat-select visually-hidden" type="radio" name="fat-value" value="30+" id="more-thirty">
-                  <label class="filter-fat" for="more-thirty">свыше 30%</label>
+                  <label class="filter-fat last-lable" for="more-thirty">выше 30%</label>
                 </div>
               </fieldset>
             </div>
