--- a/catalog.html
+++ b/catalog.html
@@ -218,7 +218,7 @@
                   <input class="fat-select visually-hidden" type="radio" name="fat-value" value="30" id="thirty">
                   <label class="filter-fat" for="thirty">до 30%</label>
                   <input class="fat-select visually-hidden" type="radio" name="fat-value" value="30+" id="more-thirty">
-                  <label class="filter-fat" for="more-thirty">выше 30%</label>
+                  <label class="filter-fat last-lbl" for="more-thirty">выше 30%</label>
                 </div>
               </fieldset>
             </div>
@@ -236,7 +236,7 @@
                   <input type="checkbox" class="toggle visually-hidden" name="topping" id="syrups" value="syrups">
                   <label class="filter-lbl" for="syrups">сиропы</label>
                   <input type="checkbox" class="toggle visually-hidden" name="topping" id="jams" value="jams">
-                  <label class="filter-lbl" for="jams">джемы</label>
+                  <label class="filter-lbl last-lbl" for="jams">джемы</label>
                 </div>
               </fieldset>
               <button class="filter-btn">Применить</button>
