--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 не спамить и не слать всякой ненужной ерунды. Честно =)</p>
               <form class="news-distrib" action="https://echo.htmlacademy.ru" method="post">
                 <label class="visually-hidden" for="email-news">Электронная почта</label>
-                <input type="email" name="email" id="email-news" placeholder="Электронная почта">
+                <input class="sub-email" type="email" name="email" id="email-news" placeholder="Электронная почта">
                 <input type="submit" class="btn-subscription-form" value="Отправить">
               </form>
             </div>
@@ -350,7 +350,7 @@
         <form class="modal-feedback" action="https://echo.htmlacademy.ru" method="post">
           <h2 class="form-title">Мы обязательно вам ответим!</h2>
           <button class="modal-feedback-close" type="button">Закрыть</button>
-          <br>
+
           <label class="visually-hidden" for="feedback-name">Имя</label>
           <input class="feedback-input" type="text" id="feedback-name" name="feedback-name" placeholder="Как вас зовут?"
             tabindex="0">
