--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,16 @@
   <!-- <link href="css/normalize.min.css" rel="stylesheet"> -->
   <link href="css/style.css" rel="stylesheet">
   <!-- <link href="css/style.min.css" rel="stylesheet"> -->
+    <!-- [if gte IE ]
+<style>
+  .fat-filter-wrapper {
+    height: 20px;
+    margin-top: 22px;
+    margin-left: -75px;
+  }
+
+</style>
+[endif] -->
 </head>
 
 <body class="body-catalog">
@@ -521,6 +531,7 @@
       </footer>
     </div>
   </div>
+
 </body>
 
 </html>
