--- a/catalog.html
+++ b/catalog.html
@@ -4,20 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог Глейси</title>
-  <link href="css/normalize.css" rel="stylesheet">
-  <!-- <link href="css/normalize.min.css" rel="stylesheet"> -->
-  <link href="css/style.css" rel="stylesheet">
-  <!-- <link href="css/style.min.css" rel="stylesheet"> -->
-    <!-- [if gte IE ]
-<style>
-  .fat-filter-wrapper {
-    height: 20px;
-    margin-top: 22px;
-    margin-left: -75px;
-  }
-
-</style>
-[endif] -->
+  <link href="css/normalize.min.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="body-catalog">
